add layout and full list of components

--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "jest": "^20.0.4",
     "jest-preset-angular": "^2.0.5",
     "loglevel": "^1.4.1",
+    "ng-canvas-gauges": "^2.0.0",
     "node-sass": "^4.5.3",
+    "raw-loader": "^0.5.1",
     "resolve-url-loader": "^2.1.0",
     "rxjs": "^5.4.2",
     "sass-loader": "^6.0.6",
